--- a/Sources/SwiftVisualizer/public/css/main.css
+++ b/Sources/SwiftVisualizer/public/css/main.css
@@ -1,3 +1,11 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
 svg text{
     -webkit-user-select: none;
     -moz-user-select: none;
