--- a/Sources/SwiftVisualizer/public/css/main.css
+++ b/Sources/SwiftVisualizer/public/css/main.css
@@ -11,6 +11,87 @@ svg text{
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-
+    
     cursor: default;
+}
+
+#tooltip {
+    position: fixed;
+    left: 10px;
+    bottom: 10px;
+    background-color: #282C34;
+    color: #ABB2BF;
+    padding: 15px;
+    border-radius: 5px;
+    width: 400px;
+    font-family: Menlo, monospace;
+    font-size: 14px;
+}
+
+.hidden {
+    display: none;
+}
+
+.section-title {
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.code {
+    line-height: 20px;
+    white-space: pre-wrap;
+    background-color: #1E2127;
+    padding: 10px;
+    border-radius: 3px;
+}
+
+.comment {
+    color: #6A737D;
+}
+
+.modifier {
+    color: #C678DD;
+}
+
+.type {
+    color: #E06C75;
+}
+
+.identifier {
+    color: #E5C07B;
+}
+
+.generics {
+    color: #98C379;
+}
+
+.inheritance {
+    color: #61AFEF;
+}
+
+.location {
+    margin-top: 10px;
+    font-size: 12px;
+    color: #ABB2BF;
+}
+
+.toolbar {
+    margin: 5px;
+    font-family: Menlo, monospace;
+}
+
+.filter-selector {
+    height: 30px;
+    background-color: #282C34;
+    color: #ABB2BF;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 14px;
+    outline: none;
+}
+
+.filter-selector:hover {
+    cursor: pointer;
 }
